--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: azsprague@vt.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Feel free to bookmark this site to keep an eye on my project updates!
 baseurl: "/home" # the subpath of your site, e.g. /blog
-url: "https://azsprague.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  azsprague
 
