--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Aidan's Site
+title: Traveller Dan
 email: aidanzsprague@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Aidan's Site
+  Tales of Europe, Summer '23
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "aidansprague.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: azsprague
