--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ email: aidanzsprague@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Tales of Europe, Summer '23
 baseurl: "" # the subpath of your site, e.g. /blog
+BASE_PATH : /
 url: "aidansprague.com" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: ellarollsaround
 github_username:  azsprague
